.env_sample for email reader

--- a/Email-reader/.env_sample
+++ b/Email-reader/.env_sample
@@ -1,2 +1,10 @@
 ASTRA_DB_APPLICATION_TOKEN = ""
 ASTRA_DB_API_ENDPOINT = ""
+ASTRA_DB_REGION = ""
+ASTRA_DB_KEYSPACE = ""
+
+MAIL_PWD = ""
+USER = "" 
+IMAP_URL = ""
+S3_ENDPOINT = ""
+FROM_GMAIL_ADDRESSES = "email address separated with commas"
